# AI_dev4-my_Sol

./: .gitignore  README.md  fetch_task.py  pyproject.toml  requirements.txt
.github/scripts/: deploy.sh
.github/workflows/: hetzner-vps-deploy.yml  pipeline.yml
CHEATSHEETS/: docker-compose.md  docker.md  gh-CLI.md  git.md  ollama.md  uv.md
Schemas/: S01E01-Structured_Output.py  base_query_GCP.py
my_Solutions/S01E01/: main.py  mainGCP.py  rough_draft.py  schemas.py  suit.py
my_Solutions/S01E02/: agents.py  main_WF.py  schemas.py  suit.py  utils.py
my_Solutions/S01E03/: .dockerignore  README.md  S01E03_send_to_verify.py  agents.py  db.py  logger.py  main.py  models.py  requirements-dev.txt  requirements.txt  schemas.py  suit.py  test_backend.py  utlis.py
my_Solutions/S01E04/: README.md  agent_get_sources.py  agents.py  logger.py  schemas.py  suit.py
my_Solutions/S01E05/: README.md  agents.py  logger.py  schemas.py  suit.py
my_Solutions/S02E01/: README.md  agents.py  logger.py  schemas.py  suit.py
my_Solutions/S02E02/: README.md  img_tools.py  main.py  schemas.py  suit.py
my_Solutions/S02E03/: README.md  main.py  prompts_lib.py  schemas.py  suit.py
my_Solutions/S02E04/: README.md  main.py  prompts_lib.py  session.py  suit.py
my_Solutions/S02E05/: README.md  main.py  prompts_lib.py  schemas.py  suit.py
my_Solutions/S03E01/: DDA.py  FULLY-solved-SONET.py  README.md  main.py  prompts_lib.py  utils.py
my_Solutions/S03E02/: README.md  main.py  suit.py  token_tracker.py  utils.py
my_Solutions/S03E03/: README.md  main.py  prompts_lib.py  suit.py
my_Solutions/S03E04/: Makefile  README.md  db_health_check.py  db_healthcheck.py  db_setup.py  get_data.py  main.py  prompts_lib.py  suit.py  task_content.md  task_verification.py  test_local.py  test_local_deploy.py
my_Solutions/S03E05/: README.md  logger.py  main.py  pathfinder.py  prompts_lib.py  schemas.py  submit_route.py  suit.py  task_content.md  test_algo_solv.py  token_tracker.py
my_Solutions/S04E01/: README.md  main.py  prompts_lib.py  schemas.py  suit.py  website_loggin.py
my_Solutions/S04E02/: README.md  deterministic_solve.py  (+6 more)
templates/: MCP_connector-test.py  base_query.py  base_query_GCP.py  base_query_GCPVertex.py  gateway-GCPVertex.py  required_output.py
(+72 files in other folders)
