[project]
name = "aidevs4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "google-cloud-aiplatform>=1.141.0",
    "google-genai>=1.66.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "openai>=2.20.0",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.66.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
